--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 \usepackage{csquotes} % Fortgeschrittene Funktionen für Zitate, für die deutsche Form der Anführungszeichen bei Referenzen
 \addbibresource{MyBibliography.bib} % Ort der .bib Datei, die die Datenbank für Literatur/Referenzen enthält.
 
-\graphicspath{{Bilder/}}
+\graphicspath{{images/}}
 
 \DeclareSIUnit{\dBm}{dBm}
 \DeclareSIUnit[per-mode=reciprocal]\WN{\per\centi\meter}
@@ -26,7 +26,7 @@
 \begin{document}
 %
 \titlehead{\includegraphics[width=5cm]{logo.jpg}}
-\title{Theoretical Physics}
+\title{Mathematical Methods of Physics}
 \author{Tobias Laser\thanks{\href{mailto:tobias.laser@uibk.ac.at}{tobias.laser@uibk.ac.at}}}
 \date{\today}
 \maketitle
